[[bin]]
name = 'certifybook-chain'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'certifybook-chain'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.4'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.certifybook-runtime]
path = '../runtime'
version = '2.0.0-alpha.4'

[dependencies.sc-basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-client-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sc-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sp-consensus-aura]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'
