[dependencies.aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.grandpa]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '0.8.0-alpha.4'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.certificate]
default-features = false
package = 'pallet-certificate'
path = '../pallets/certificate'
version = '2.0.0-alpha.4'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'
[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'certificate/std',
]

[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'certifybook-runtime'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.4'
