[package]
authors = ['Anonymous']
description = 'FRAME pallet certificate'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-certificate'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.4'
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'safe-mix/std',
    'system/std',
    'sp-runtime/std',
]
[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '6a38fdc0a61ff2c81f1b06b51eaf1d994000e9c3'
version = '2.0.0-alpha.4'
